<resources>
    <string name="app_name">Calcula Tempo e Percurso</string>
    <string name="action_settings">Settings</string>
    <string name="travelled_distance">Travelled distance:</string>
    <string name="past_time">Past time:</string>
    <string name="txt_permissionGPS">Allow use of GPS</string>//
    <string name="txt_enableGPS">Enable GPS</string>
    <string name="txt_disableGPS">Disable GPS</string>
    <string name="txt_startRoute">Start route</string>
    <string name="txt_endRoute">Finish route</string>
    <string name="padrao_distance">00:00"</string>
    <string name="txt_search">search</string>


</resources>
