<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:columnCount="2"
    android:rowCount="10"
    android:useDefaultMargins="true"
    >
    <Button
        android:id="@+id/bt_requestGPS"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_size"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/green_button"
        android:text="@string/txt_permissionGPS" />

    <Button
        android:id="@+id/bt_enableGPS"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"
        android:text="@string/txt_enableGPS" />

    <Button
        android:id="@+id/bt_disableGPS"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"
        android:text="@string/txt_disableGPS" />

    <Button
        android:id="@+id/bt_startRoute"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"
        android:text="@string/txt_startRoute" />

    <Button
        android:id="@+id/bt_endRoute"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_size"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="@color/green_button"
        android:text="@string/txt_endRoute" />

    <TextView
        android:id="@+id/label_travelledDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/travelled_distance"
        />

    <TextView
        android:id="@+id/resultaTravelledDistance"
        android:layout_width="@dimen/result_size"
        android:layout_height="@dimen/height_size2"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:background="@color/grey_box"
        android:text="@string/padrao_distance" />
    <TextView
        android:id="@+id/label_pastTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_time"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        />

    <Chronometer
        android:id="@+id/resultPastTime"
        android:layout_width="@dimen/result_size"
        android:layout_height="@dimen/height_size2"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="end"
        android:background="@color/grey_box"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_search" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        app:srcCompat="@android:drawable/ic_menu_zoom" />

</GridLayout>